# NeuralNetwork

./: .gitignore  CMakeLists.txt  Makefile  NeuralNetwork.sublime-workspace  net_output.txt  results.txt
Debug/: NeuralNetwork  net_output.txt
inc/: NeuralNetwork.h  Tester.h  Trainer.h
src/: NeuralNetwork.cpp  Tester.cpp  Trainer.cpp  main.cpp
test/Adult/: description.txt  net_init.txt  net_trained.txt  results_0.1_100.txt  test.txt  train.txt
test/Adult/raw_data/: ~$Test Data.xlsx
test/WDBC/: net_init.txt  net_output.txt
